--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<div class="container text-center mt-5">
+    <h1 class="display-4">Кликер!</h1>
+    <p class="lead">Количество кликов: <span class="font-weight-bold">{{ current_user.clicks }}</span></p>
+
+    <a href="{{ url_for('click') }}" class="btn btn-primary btn-lg">Кнопка</a>
+</div>
+{% endblock %}
